# tenro-python

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: RELEASE_NOTES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-close-pr.yml  ci.yml  release.yml
src/tenro/: __init__.py  _block_message.py  _init.py  construct.py  llm_response.py  providers.py  spans.py  testing.py  tool_calls.py
src/tenro/_construct/: __init__.py  construct.py  decorators.py  in_memory_store.py  span_store.py
src/tenro/_construct/http/: __init__.py  interceptor.py  provider_endpoints.py  request_parser.py  streaming.py
src/tenro/_construct/http/builders/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
src/tenro/_construct/http/registry/: __init__.py  builtin.py  exceptions.py  plugins.py  registry.py  types.py
src/tenro/_construct/http/schemas/: __init__.py
src/tenro/_construct/lifecycle/: __init__.py  linker.py  span_accessor.py
src/tenro/_construct/simulate/: __init__.py  helpers.py  orchestrator.py  response_parser.py  rule.py  target_resolution.py  tracker.py  types.py
src/tenro/_construct/verify/: __init__.py  agent.py  assertions.py  content.py  engine.py  format.py  llm.py  llm_scope.py  output.py  tool.py  trajectory.py
src/tenro/_core/: __init__.py  context.py  eval_types.py  events.py  lifecycle_manager.py  model_base.py  payloads.py  reconstruction.py  response_types.py  span_filters.py  span_handler.py  spans.py  trace_types.py
src/tenro/_otel/: __init__.py  config.py  constants.py  mapper.py  types.py
src/tenro/_patching/: __init__.py  engine.py  patchers.py
src/tenro/errors/: __init__.py  base.py  simulation.py  warnings.py
src/tenro/evals/: __init__.py  types.py  validators.py
src/tenro/linking/: __init__.py  constants.py  context.py  decorators.py  detection.py  dispatch.py  generators.py  metadata.py  span_factories.py
src/tenro/protocols/: __init__.py  event_store.py
src/tenro/pytest_plugin/: __init__.py  block_report.py  construct_registry.py  fixtures.py  marks.py  plugin.py
src/tenro/simulate/: __init__.py  _helpers.py  _register.py  agent.py  llm.py  tool.py
src/tenro/trace/: __init__.py  config.py  icons.py  renderer.py  span_io.py
src/tenro/trace_policy/: __init__.py  _canonical.py  applier.py  categories.py  config.py  env.py  modes.py  policy.py  transforms.py
src/tenro/util/: __init__.py  cache.py  env.py  list_helpers.py  paths.py
tests/: conftest.py  test_agent_simulation.py  test_llm_simulation.py  test_pytest_plugin.py  test_simulate_decorator.py  test_tool_simulation.py
tests/examples/: README.md  conftest.py
tests/examples/custom/: README.md  test_code_review_agent.py  test_custom_customer_support.py  test_custom_multi_turn_conversation.py  test_custom_rag_pipeline.py  test_email_summarizer_agent.py  test_meeting_notes_agent.py  test_rag_document_agent.py  test_recruitment_agent.py  test_research_assistant_agent.py  test_sales_outreach_agent.py  test_voice_call_agent.py
tests/examples/experimental/autogen/: README.md  test_autogen_customer_support.py  test_autogen_multi_turn_conversation.py  test_autogen_rag_pipeline.py
tests/examples/experimental/crewai/: README.md  test_crewai_customer_support.py  test_crewai_multi_turn_conversation.py  test_crewai_rag_pipeline.py
tests/examples/experimental/langchain/: README.md  test_langchain_customer_support.py  test_langchain_multi_turn_conversation.py  test_langchain_rag_pipeline.py  test_langchain_thirdparty_tools.py
tests/examples/experimental/langgraph/: README.md  test_langgraph_customer_support.py  test_langgraph_multi_turn_conversation.py  test_langgraph_rag_pipeline.py
tests/examples/experimental/llamaindex/: README.md  test_llamaindex_customer_support.py  test_llamaindex_multi_turn_conversation.py  test_llamaindex_rag_pipeline.py
tests/examples/experimental/pydantic_ai/: README.md  conftest.py  test_pydantic_ai_customer_support.py  test_pydantic_ai_multi_turn_conversation.py  test_pydantic_ai_rag_pipeline.py
tests/examples/myapp/: __init__.py  agents.py  clients.py  tools.py
tests/examples/patterns/: README.md  test_default_provider.py  test_dynamic_behavior.py  test_optional_simulations.py  test_simulating_errors.py  test_simulating_responses.py  test_simulating_tool_calls.py  test_verifying_call_sequence.py  test_verifying_calls.py  test_verifying_content.py  test_verifying_never_called.py
tests/myapp/: __init__.py  agents.py  llm_functions.py
tests/trajectory/: conftest.py  test_before.py  test_subsequence.py  test_tools_called.py
(+46 files in other folders)
