[project]
name = "tenro"
version = "0.2.1"
description = "A modern multi-agent AI testing framework"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "ai-agents",
    "agent-testing",
    "multi-agent",
    "llm",
    "llm-testing",
    "testing",
    "pytest",
    "pytest-plugin",
    "simulation",
    "tracing"
]
authors = [
    { name = "Tenro", email = "support@tenro.ai" }
]
maintainers = [
    { name = "Tenro", email = "support@tenro.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.11.9",
    "respx>=0.22.0",
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "uuid-utils>=0.12.0",
]

[project.entry-points.pytest11]
tenro = "tenro.pytest_plugin.plugin"

[project.urls]
Homepage = "https://github.com/tenro-ai/tenro-python"
Repository = "https://github.com/tenro-ai/tenro-python"
Changelog = "https://github.com/tenro-ai/tenro-python/releases"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenro"]
include = ["LICENSE", "src/tenro/py.typed", "src/tenro/**/*.json"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/tenro",
    "LICENSE",
    "README.md",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "vulture>=2.14",
    "pre-commit>=4.5.1",
    "openai>=2.14.0,<3.0.0",
    "anthropic>=0.75.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "pydoclint>=0.8.3",
    "docstring-parser-fork>=0.0.14",
    "google-generativeai>=0.8.6,<1.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
examples = [
    "langchain>=1.2.0,<2.0.0",
    "langchain-openai>=1.1.6,<2.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-anthropic>=1.3.1,<2.0.0",
    "langchain-google-genai>=4.2.0,<5.0.0",
    "langgraph>=1.0.5,<2.0.0",
    "pydantic-ai>=1.39.0,<2.0.0",
    "crewai>=0.140,<1.0.0; python_version < '3.14'",
    "autogen-agentchat>=0.5.0,<1.0.0; python_version < '3.14'",
    "autogen-ext>=0.5.0,<1.0.0; python_version < '3.14'",
    "llama-index>=0.14.12,<1.0.0; python_version < '3.14'",
    "llama-index-llms-openai>=0.6.12,<1.0.0; python_version < '3.14'",
    # Required by langchain_community tools (DuckDuckGoSearchRun, WikipediaQueryRun)
    "ddgs>=9.10.0,<10.0.0",
    "wikipedia>=1.4.0,<2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle
    "FIX", # flake8-fixme (TODO/FIXME comments)
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D417", # Missing argument descriptions in docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["tenro"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = "^(tests|examples)/"

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["tenro"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
